--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 										<p><span class="title-s">Name: </span> <span>Asif Shaikh</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
 										<p><span class="title-s">Experience: </span> <span> Fresher</span></p>
-										<p><span class="title-s">Address: </span> <span>Daund, India</span></p>
+										<p><span class="title-s">Address: </span> <span>Daund, Maharashtra</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -377,10 +377,10 @@
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2019-2020</span>
-    					<h2>Higher Secondary (XII)</h2>
+    					<span class="date">2020</span>
+    					<h2>Higher Secondary (XII), Science</h2>
     					<span class="position">Shri Chhatrapati Shivaji College Omerga, Osmanabad (HSC board)</span>
-    					<p class="mt-4">Aggregate: 66.31%</p>
+    					<p class="mt-4">Percentage: 66.31%</p>
     				</div>
 				</div>
 
@@ -389,7 +389,7 @@
     					<span class="date">2018</span>
     					<h2>Secondary (X)</h2>
     					<span class="position">Bharat Vidyalaya Omerga, Osmanabad (SSC board)</span>
-    					<p class="mt-4">Aggregate: 87.40%</p>
+    					<p class="mt-4">Percentage: 87.40%</p>
     				</div>
 				</div>
     		</div>
@@ -549,7 +549,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Daund, India</p>
+	            <p>Daund, Maharashtra</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
