--- a/index.html
+++ b/index.html
@@ -394,13 +394,13 @@
 				</div>
     		</div>
 
-    		// <div class="row justify-content-center mt-5">
-    			//<div class="col-md-6 text-center ftco-animate">
-	 			//<p><a href="https://drive.google.com/file/d/1O1rk2A720INh38VTD6DAifDbdNL9kieM/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
-    			//</div>
-    		//</div>
-    	//</div>
-  //  </section>
+    		 <div class="row justify-content-center mt-5">
+    			<div class="col-md-6 text-center ftco-animate">
+	 			<p><a href="https://drive.google.com/file/d/1O1rk2A720INh38VTD6DAifDbdNL9kieM/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    			</div>
+    		</div>
+    	</div>
+    </section>
 
    
 
