--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 									<li class="d-flex"><span>Education:</span> <span>B.E. in Computer Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>MS Excel, Jupyter Notebook, NumPy, Pandas, Matplotlib, Seaborn</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, SQL, Excel, Power BI, Pandas, Numpy, Matplotlib, Seaborn, Data Cleaning, Data Visualization, Statistical Analysis</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Learning new things,Traveling, Cricket</span></li>
 									
 								</ul>
@@ -291,7 +291,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="2">0</span> <span>+</span>
+									<span class="number" data-number="5">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/asif-shaikh-580bab246" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -396,7 +396,7 @@
 
     		 <div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-	 			<p><a href="https://drive.google.com/file/d/1O1rk2A720INh38VTD6DAifDbdNL9kieM/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download CV</a></p>
+	 			<p><a href="" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -410,7 +410,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Data Analytics projects on Python, SQL, Excel & Power BI.</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -576,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1O1rk2A720INh38VTD6DAifDbdNL9kieM/view?usp=drivesdk">Resume Link</a></p>
+	            <p><a href="">Resume Link</a></p>
 	          </div>
           </div>
 
