--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/asifshaikh174/SQL_Music_Store_Analysis">Digital Music Store Data Analysis using SQL</a></h3>
+                <h3 class="heading"><a href="https://github.com/asifshaikh174/SQL_Music_Store_Analysis">Digital Music Store Analysis using SQL</a></h3>
                 <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
               </div>
             </div>
@@ -431,7 +431,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/asifshaikh174/Python_Diwali_Sales_Analysis">Data Analysis using Python Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/asifshaikh174/Python_Diwali_Sales_Analysis">Diwali Saeles Analysis using Python</a></h3>
                 <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
               </div>
             </div>
@@ -442,7 +442,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/asifshaikh174/Ecommerce_Sales_Dashboard">Power BI Sales dashboard Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/asifshaikh174/Ecommerce_Sales_Dashboard">Ecommerce Sales Dashboard using Power BI</a></h3>
                 <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
@@ -457,8 +457,8 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Credit Card Financial Dashboard</a></h3>
+				  <p>Created a credit card weekly dashboard that offers real-time insights into crucial performance metrics and trends, helping stakeholders effectively monitor and analyze credit card operations.</p>
 				</div>
 			  </div>
 			</div>
