--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/asifshaikh174/PowerBI_Dashboard_Project" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/asifshaikh174/PowerBI_Dashboard_Project" class="block-20 zoom-effect" style="background-image: url('F:\PROJECTS\asifshaikh174.github.io\images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
@@ -449,11 +449,11 @@
           </div>
         </div>
 	<br>
-		<!-- added justify-content-center to center align the last two projects -->
-		<!-- <div class="row d-flex justify-content-center">  
+		 added justify-content-center to center align the last two projects
+		 <div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('F:\PROJECTS\asifshaikh174.github.io\images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -462,7 +462,7 @@
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-4 d-flex ftco-animate">
+			<!-- <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
