--- a/index.html
+++ b/index.html
@@ -270,10 +270,9 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>Enthusiastic and detail-oriented recent graduate with a solid foundation in data analysis, statistics, and data visualization. 
-									Proficient in leveraging various data analysis tools and techniques to derive actionable insights. 
-									Skilled in SQL, Excel, Python, and data visualization tools such as Power BI. Adept at cleaning, processing, and 
-									analyzing large datasets to support decision-making and strategic planning.</p>
+								<p>Enthusiastic and motivated graduate with a keen interest in data analytics, equipped with Bachelor of Engineering in Computer Science. Proficient in statistical analysis, data cleaning, 
+									and data visualization acquired through academic projects and internships. Skilled in Python, SQL, MS Excel, and data manipulation tools like Pandas and NumPy. Visualization tools 
+									like Power BI and libraries like Matplotlib and Seaborn. Possesses a strong analytical mindset and a passion for solving complex problems through data-driven insights.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce</span></li>
