--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
 									like Power BI and libraries like Matplotlib and Seaborn. Possesses a strong analytical mindset and a passion for solving complex problems through data-driven insights.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce</span></li>
+									<!-- <li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce</span></li> -->
 									<li class="d-flex"><span>Education:</span> <span>B.E. in Computer Engineering</span></li>
-									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi</span></li>
+									<li class="d-flex"><span>Languages:</span> <span>English, Hindi, Marathi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Python, SQL, Excel, Power BI, Pandas, Numpy, Matplotlib, Seaborn, Data Cleaning, Data Visualization, Statistical Analysis</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Learning new things,Traveling, Cricket</span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Learning new things, Traveling, Cricket</span></li>
 									
 								</ul>
 							</div>
