--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span></span>Data Visualization<span class="pull-right">80%</span>
+									<span>Data Visualization</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
