--- a/index.html
+++ b/index.html
@@ -463,12 +463,12 @@
 			</div>
 			< <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/asifshaikh174/Road_Accident_Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Road Accident Dashboard using Excel</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/asifshaikh174/Road_Accident_Dashboard">Road Accident Dashboard using Excel</a></h3>
+				  <p>Developed a comprehensive Road Accident Dashboard in Excel to analyze data from 2021, 2022 and 2023.</p>
 				</div>
 			  </div>
 			</div>
