--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 			</div>
 			< <div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/asifshaikh174/Road_Accident_Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/asifshaikh174/Road_Accident_Dashboard" class="block-20 zoom-effect" style="background-image: url('images/proj_5.png');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
