--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 			            <h2>A Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/asif-shaikh-580bab246" class="btn btn-primary py-3 px-4">Linkedin</a> 
+			            <p><a href="https://www.linkedin.com/in/asifsshaikh" class="btn btn-primary py-3 px-4">Linkedin</a> 
 							<a href="https://github.com/asifshaikh174" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -591,7 +591,7 @@
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <!-- <li class="ftco-animate"><a href="https://www.youtube.com/@RishabhMishraOfficial"><span class="icon-youtube"></span></a></li> -->
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/asif-shaikh-580bab246"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/asifsshaikh"><span class="icon-linkedin"></span></a></li>  
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-twitter"></span></a></li> -->
 					  <!-- <li class="ftco-animate"><a href="https://twitter.com/rishabhnmishra"><span class="icon-facebook"></span></a></li> -->
 				      <li class="ftco-animate"><a href="https://www.instagram.com/invites/contact/?igsh=11e4k6fcqq81e&utm_content=kw7h9df"><span class="icon-instagram"></span></a></li>
